tests/snapshots/surface_snapshots__help-hook.snap
---
source: tests/surface_snapshots.rs
expression: "help(&[verb])"
---
Read a tool-event payload on stdin and report on the write

Usage: mnemex hook

Options:
  -h, --help  Print help
